cluster/traefik/ingress-routes.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: dashboard-users
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-secure
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.rvserver.online`)
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: dashboard-auth
    - kind: Rule
      match: Host(`traefik.rvserver.online`) && PathPrefix("/api")
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: dashboard-auth
